[project]
name = "toolbox"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "a-etienne", email = "a.etienne@dailymotion.com"},
]
dependencies = [
    "pydantic>=2.10.4",
    "pytest>=8.3.4",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.10.0",
]

[tool.black]
line-length = 120